--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,18 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = [{'name':'Hello', 'id':1}, {'name':'Yes', 'id':2}, {'name':'No', 'id':3}, {'name':'I-Love-You', 'id':4}]\n",
+    "# labels = [{'name':'Hello', 'id':1}, {'name':'Yes', 'id':2}, {'name':'No', 'id':3}, {'name':'I-Love-You', 'id':4}]\n",
     "\n",
-    "with open(ANNOTATION_PATH + '\\label_map.pbtxt', 'w') as f:\n",
-    "    for label in labels:\n",
-    "        f.write('item { \\n')\n",
-    "        f.write('\\tname:\\'{}\\'\\n'.format(label['name']))\n",
-    "        f.write('\\tid:{}\\n'.format(label['id']))\n",
-    "        f.write('}\\n')"
+    "# with open(ANNOTATION_PATH + '\\label_map.pbtxt', 'w') as f:\n",
+    "#     for label in labels:\n",
+    "#         f.write('item { \\n')\n",
+    "#         f.write('\\tname:\\'{}\\'\\n'.format(label['name']))\n",
+    "#         f.write('\\tid:{}\\n'.format(label['id']))\n",
+    "#         f.write('}\\n')"
    ]
   },
   {
@@ -65,21 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: line 1: python: command not found\n",
-      "/bin/bash: line 1: python: command not found\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ayush/Desktop/RealTimeObjectDetection/Tensorflow/scripts/generate_tfrecord.py\", line 29, in <module>\n",
+      "    from object_detection.utils import dataset_util, label_map_util\n",
+      "  File \"/home/ayush/.local/lib/python3.10/site-packages/object_detection/utils/label_map_util.py\", line 21, in <module>\n",
+      "    from object_detection.protos import string_int_label_map_pb2\n",
+      "ImportError: cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (/home/ayush/.local/lib/python3.10/site-packages/object_detection/protos/__init__.py)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ayush/Desktop/RealTimeObjectDetection/Tensorflow/scripts/generate_tfrecord.py\", line 29, in <module>\n",
+      "    from object_detection.utils import dataset_util, label_map_util\n",
+      "  File \"/home/ayush/.local/lib/python3.10/site-packages/object_detection/utils/label_map_util.py\", line 21, in <module>\n",
+      "    from object_detection.protos import string_int_label_map_pb2\n",
+      "ImportError: cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (/home/ayush/.local/lib/python3.10/site-packages/object_detection/protos/__init__.py)\n"
      ]
     }
    ],
    "source": [
-    "!python {SCRIPTS_PATH + '/generate_tfrecord.py'} -x {IMAGE_PATH + '/train'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/train.record'}\n",
-    "!python {SCRIPTS_PATH + '/generate_tfrecord.py'} -x{IMAGE_PATH + '/test'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/test.record'}"
+    "!python3 {SCRIPTS_PATH + '/generate_tfrecord.py'} -x {IMAGE_PATH + '/train'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/train.record'}\n",
+    "!python3 {SCRIPTS_PATH + '/generate_tfrecord.py'} -x{IMAGE_PATH + '/test'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/test.record'}"
    ]
   },
   {
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +110,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.data-00000-of-00001\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/checkpoint\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.index\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/pipeline.config\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/saved_model.pb\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.data-00000-of-00001\n",
+      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.index\n"
+     ]
+    }
+   ],
    "source": [
     "# import wget as wget\n",
     "# wget.download('http://download.tensorflow.org/models/object_detection/tf2/20200711/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8.tar.gz')\n",
@@ -119,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,22 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'eval_pb2' from 'object_detection.protos' (/home/ayush/.local/lib/python3.10/site-packages/object_detection/protos/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mobject_detection\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m config_util\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mobject_detection\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotos\u001b[39;00m \u001b[39mimport\u001b[39;00m pipeline\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgoogle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotobuf\u001b[39;00m \u001b[39mimport\u001b[39;00m text_format\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/object_detection/utils/config_util.py:24\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgoogle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotobuf\u001b[39;00m \u001b[39mimport\u001b[39;00m text_format\n\u001b[1;32m     22\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m \u001b[39mimport\u001b[39;00m file_io\n\u001b[0;32m---> 24\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mobject_detection\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotos\u001b[39;00m \u001b[39mimport\u001b[39;00m eval_pb2\n\u001b[1;32m     25\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mobject_detection\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotos\u001b[39;00m \u001b[39mimport\u001b[39;00m graph_rewriter_pb2\n\u001b[1;32m     26\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mobject_detection\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotos\u001b[39;00m \u001b[39mimport\u001b[39;00m input_reader_pb2\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'eval_pb2' from 'object_detection.protos' (/home/ayush/.local/lib/python3.10/site-packages/object_detection/protos/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from object_detection.utils import config_util\n",
@@ -170,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,73 +194,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'config_util' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m config \u001b[39m=\u001b[39m config_util\u001b[39m.\u001b[39mget_configs_from_pipeline_file(\u001b[39m\"\u001b[39m\u001b[39mCONFIG_PATH\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'config_util' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config = config_util.get_configs_from_pipeline_file(\"CONFIG_PATH\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available objects for config:\n",
-      "    AliasManager\n",
-      "    DisplayFormatter\n",
-      "    HistoryManager\n",
-      "    IPCompleter\n",
-      "    IPKernelApp\n",
-      "    LoggingMagics\n",
-      "    MagicsManager\n",
-      "    OSMagics\n",
-      "    PrefilterManager\n",
-      "    ScriptMagics\n",
-      "    StoreMagics\n",
-      "    ZMQInteractiveShell\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pipeline_pb2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pipeline_config \u001b[39m=\u001b[39m pipeline_pb2\u001b[39m.\u001b[39mTrainEvalPipelineConfig()\n\u001b[1;32m      2\u001b[0m \u001b[39mwith\u001b[39;00m tf\u001b[39m.\u001b[39mio\u001b[39m.\u001b[39mgfile\u001b[39m.\u001b[39mGFile(CONFIG_PATH, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:                                                                                                                                                                                                                     \n\u001b[1;32m      3\u001b[0m     proto_str \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread()                                                                                                                                                                                                                                          \n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pipeline_pb2' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pipeline_config = pipeline_pb2.TrainEvalPipelineConfig()\n",
     "with tf.io.gfile.GFile(CONFIG_PATH, \"r\") as f:                                                                                                                                                                                                                     \n",
@@ -305,22 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (/home/ayush/.local/lib/python3.10/site-packages/object_detection/protos/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mobject_detection\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m label_map_util\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mobject_detection\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m visualization_utils \u001b[39mas\u001b[39;00m viz_utils\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mobject_detection\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mbuilders\u001b[39;00m \u001b[39mimport\u001b[39;00m model_builder\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/object_detection/utils/label_map_util.py:21\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgoogle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotobuf\u001b[39;00m \u001b[39mimport\u001b[39;00m text_format\n\u001b[0;32m---> 21\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mobject_detection\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprotos\u001b[39;00m \u001b[39mimport\u001b[39;00m string_int_label_map_pb2\n\u001b[1;32m     24\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_validate_label_map\u001b[39m(label_map):\n\u001b[1;32m     25\u001b[0m   \u001b[39m\"\"\"Checks if a label map is valid.\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \n\u001b[1;32m     27\u001b[0m \u001b[39m  Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[39m    ValueError: if label map is invalid.\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[39m  \"\"\"\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (/home/ayush/.local/lib/python3.10/site-packages/object_detection/protos/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from object_detection.utils import label_map_util\n",
