--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -65,31 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/ayush/Desktop/RealTimeObjectDetection/Tensorflow/scripts/generate_tfrecord.py\", line 29, in <module>\n",
-      "    from object_detection.utils import dataset_util, label_map_util\n",
-      "  File \"/home/ayush/.local/lib/python3.10/site-packages/object_detection/utils/label_map_util.py\", line 21, in <module>\n",
-      "    from object_detection.protos import string_int_label_map_pb2\n",
-      "ImportError: cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (/home/ayush/.local/lib/python3.10/site-packages/object_detection/protos/__init__.py)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/ayush/Desktop/RealTimeObjectDetection/Tensorflow/scripts/generate_tfrecord.py\", line 29, in <module>\n",
-      "    from object_detection.utils import dataset_util, label_map_util\n",
-      "  File \"/home/ayush/.local/lib/python3.10/site-packages/object_detection/utils/label_map_util.py\", line 21, in <module>\n",
-      "    from object_detection.protos import string_int_label_map_pb2\n",
-      "ImportError: cannot import name 'string_int_label_map_pb2' from 'object_detection.protos' (/home/ayush/.local/lib/python3.10/site-packages/object_detection/protos/__init__.py)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!python3 {SCRIPTS_PATH + '/generate_tfrecord.py'} -x {IMAGE_PATH + '/train'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/train.record'}\n",
-    "!python3 {SCRIPTS_PATH + '/generate_tfrecord.py'} -x{IMAGE_PATH + '/test'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/test.record'}"
+    "# !python3 {SCRIPTS_PATH + '/generate_tfrecord.py'} -x {IMAGE_PATH + '/train'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/train.record'}\n",
+    "# !python3 {SCRIPTS_PATH + '/generate_tfrecord.py'} -x{IMAGE_PATH + '/test'} -l {ANNOTATION_PATH + '/label_map.pbtxt'} -o {ANNOTATION_PATH + '/test.record'}"
    ]
   },
   {
@@ -101,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,25 +93,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.data-00000-of-00001\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/checkpoint\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.index\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/pipeline.config\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/saved_model.pb\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.data-00000-of-00001\n",
-      "ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import wget as wget\n",
     "# wget.download('http://download.tensorflow.org/models/object_detection/tf2/20200711/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8.tar.gz')\n",
@@ -147,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,19 +136,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-17 10:38:35.350252: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-12-17 10:38:35.496838: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-12-17 10:38:35.496861: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2022-12-17 10:38:36.494069: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-12-17 10:38:36.494155: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-12-17 10:38:36.494165: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from object_detection.utils import config_util\n",
-    "from object_detection.protos import pipeline\n",
+    "from object_detection.protos import pipeline_pb2\n",
     "from google.protobuf import text_format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,27 +171,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = config_util.get_configs_from_pipeline_file(\"CONFIG_PATH\")"
+    "config = config_util.get_configs_from_pipeline_file(CONFIG_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model': ssd {\n",
+       "   num_classes: 4\n",
+       "   image_resizer {\n",
+       "     fixed_shape_resizer {\n",
+       "       height: 320\n",
+       "       width: 320\n",
+       "     }\n",
+       "   }\n",
+       "   feature_extractor {\n",
+       "     type: \"ssd_mobilenet_v2_fpn_keras\"\n",
+       "     depth_multiplier: 1.0\n",
+       "     min_depth: 16\n",
+       "     conv_hyperparams {\n",
+       "       regularizer {\n",
+       "         l2_regularizer {\n",
+       "           weight: 3.9999998989515007e-05\n",
+       "         }\n",
+       "       }\n",
+       "       initializer {\n",
+       "         random_normal_initializer {\n",
+       "           mean: 0.0\n",
+       "           stddev: 0.009999999776482582\n",
+       "         }\n",
+       "       }\n",
+       "       activation: RELU_6\n",
+       "       batch_norm {\n",
+       "         decay: 0.996999979019165\n",
+       "         scale: true\n",
+       "         epsilon: 0.0010000000474974513\n",
+       "       }\n",
+       "     }\n",
+       "     use_depthwise: true\n",
+       "     override_base_feature_extractor_hyperparams: true\n",
+       "     fpn {\n",
+       "       min_level: 3\n",
+       "       max_level: 7\n",
+       "       additional_layer_depth: 128\n",
+       "     }\n",
+       "   }\n",
+       "   box_coder {\n",
+       "     faster_rcnn_box_coder {\n",
+       "       y_scale: 10.0\n",
+       "       x_scale: 10.0\n",
+       "       height_scale: 5.0\n",
+       "       width_scale: 5.0\n",
+       "     }\n",
+       "   }\n",
+       "   matcher {\n",
+       "     argmax_matcher {\n",
+       "       matched_threshold: 0.5\n",
+       "       unmatched_threshold: 0.5\n",
+       "       ignore_thresholds: false\n",
+       "       negatives_lower_than_unmatched: true\n",
+       "       force_match_for_each_row: true\n",
+       "       use_matmul_gather: true\n",
+       "     }\n",
+       "   }\n",
+       "   similarity_calculator {\n",
+       "     iou_similarity {\n",
+       "     }\n",
+       "   }\n",
+       "   box_predictor {\n",
+       "     weight_shared_convolutional_box_predictor {\n",
+       "       conv_hyperparams {\n",
+       "         regularizer {\n",
+       "           l2_regularizer {\n",
+       "             weight: 3.9999998989515007e-05\n",
+       "           }\n",
+       "         }\n",
+       "         initializer {\n",
+       "           random_normal_initializer {\n",
+       "             mean: 0.0\n",
+       "             stddev: 0.009999999776482582\n",
+       "           }\n",
+       "         }\n",
+       "         activation: RELU_6\n",
+       "         batch_norm {\n",
+       "           decay: 0.996999979019165\n",
+       "           scale: true\n",
+       "           epsilon: 0.0010000000474974513\n",
+       "         }\n",
+       "       }\n",
+       "       depth: 128\n",
+       "       num_layers_before_predictor: 4\n",
+       "       kernel_size: 3\n",
+       "       class_prediction_bias_init: -4.599999904632568\n",
+       "       share_prediction_tower: true\n",
+       "       use_depthwise: true\n",
+       "     }\n",
+       "   }\n",
+       "   anchor_generator {\n",
+       "     multiscale_anchor_generator {\n",
+       "       min_level: 3\n",
+       "       max_level: 7\n",
+       "       anchor_scale: 4.0\n",
+       "       aspect_ratios: 1.0\n",
+       "       aspect_ratios: 2.0\n",
+       "       aspect_ratios: 0.5\n",
+       "       scales_per_octave: 2\n",
+       "     }\n",
+       "   }\n",
+       "   post_processing {\n",
+       "     batch_non_max_suppression {\n",
+       "       score_threshold: 9.99999993922529e-09\n",
+       "       iou_threshold: 0.6000000238418579\n",
+       "       max_detections_per_class: 100\n",
+       "       max_total_detections: 100\n",
+       "       use_static_shapes: false\n",
+       "     }\n",
+       "     score_converter: SIGMOID\n",
+       "   }\n",
+       "   normalize_loss_by_num_matches: true\n",
+       "   loss {\n",
+       "     localization_loss {\n",
+       "       weighted_smooth_l1 {\n",
+       "       }\n",
+       "     }\n",
+       "     classification_loss {\n",
+       "       weighted_sigmoid_focal {\n",
+       "         gamma: 2.0\n",
+       "         alpha: 0.25\n",
+       "       }\n",
+       "     }\n",
+       "     classification_weight: 1.0\n",
+       "     localization_weight: 1.0\n",
+       "   }\n",
+       "   encode_background_as_zeros: true\n",
+       "   normalize_loc_loss_by_codesize: true\n",
+       "   inplace_batchnorm_update: true\n",
+       "   freeze_batchnorm: false\n",
+       " },\n",
+       " 'train_config': batch_size: 4\n",
+       " data_augmentation_options {\n",
+       "   random_horizontal_flip {\n",
+       "   }\n",
+       " }\n",
+       " data_augmentation_options {\n",
+       "   random_crop_image {\n",
+       "     min_object_covered: 0.0\n",
+       "     min_aspect_ratio: 0.75\n",
+       "     max_aspect_ratio: 3.0\n",
+       "     min_area: 0.75\n",
+       "     max_area: 1.0\n",
+       "     overlap_thresh: 0.0\n",
+       "   }\n",
+       " }\n",
+       " sync_replicas: true\n",
+       " optimizer {\n",
+       "   momentum_optimizer {\n",
+       "     learning_rate {\n",
+       "       cosine_decay_learning_rate {\n",
+       "         learning_rate_base: 0.07999999821186066\n",
+       "         total_steps: 50000\n",
+       "         warmup_learning_rate: 0.026666000485420227\n",
+       "         warmup_steps: 1000\n",
+       "       }\n",
+       "     }\n",
+       "     momentum_optimizer_value: 0.8999999761581421\n",
+       "   }\n",
+       "   use_moving_average: false\n",
+       " }\n",
+       " fine_tune_checkpoint: \"Tensorflow/workspace/pre-trained-models/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0\"\n",
+       " num_steps: 50000\n",
+       " startup_delay_steps: 0.0\n",
+       " replicas_to_aggregate: 8\n",
+       " max_number_of_boxes: 100\n",
+       " unpad_groundtruth_tensors: false\n",
+       " fine_tune_checkpoint_type: \"detection\"\n",
+       " fine_tune_checkpoint_version: V2,\n",
+       " 'train_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " tf_record_input_reader {\n",
+       "   input_path: \"Tensorflow/workspace/annotations/train.record\"\n",
+       " },\n",
+       " 'eval_config': metrics_set: \"coco_detection_metrics\"\n",
+       " use_moving_averages: false,\n",
+       " 'eval_input_configs': [label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " shuffle: false\n",
+       " num_epochs: 1\n",
+       " tf_record_input_reader {\n",
+       "   input_path: \"Tensorflow/workspace/annotations/test.record\"\n",
+       " }\n",
+       " ],\n",
+       " 'eval_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " shuffle: false\n",
+       " num_epochs: 1\n",
+       " tf_record_input_reader {\n",
+       "   input_path: \"Tensorflow/workspace/annotations/test.record\"\n",
+       " }}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,11 +435,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\"\"python {}/research/object_detection/model_main_tf2.py --model_dir={}/{} --pipeline_config_path={}/{}/pipeline.config --num_train_steps=5000\"\"\".format(APIMODEL_PATH, MODEL_PATH,CUSTOM_MODEL_NAME,MODEL_PATH,CUSTOM_MODEL_NAME))"
+    "# print(\"\"\"python3 {}/research/object_detection/model_main_tf2.py --model_dir={}/{} --pipeline_config_path={}/{}/pipeline.config --num_train_steps=5000\"\"\".format(APIMODEL_PATH, MODEL_PATH,CUSTOM_MODEL_NAME,MODEL_PATH,CUSTOM_MODEL_NAME))"
    ]
   },
   {
@@ -276,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,9 +465,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-17 10:38:39.090053: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-12-17 10:38:39.090089: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-12-17 10:38:39.090110: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (ayush-HP): /proc/driver/nvidia/version does not exist\n",
+      "2022-12-17 10:38:39.090373: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load pipeline config and build a detection model\n",
     "configs = config_util.get_configs_from_pipeline_file(CONFIG_PATH)\n",
@@ -319,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,16 +525,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap.release()"
+    "# cap.release()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,9 +546,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/ayush/.local/lib/python3.10/site-packages/tensorflow/python/autograph/pyct/static_analysis/liveness.py:83: Analyzer.lamba_check (from tensorflow.python.autograph.pyct.static_analysis.liveness) is deprecated and will be removed after 2023-09-23.\n",
+      "Instructions for updating:\n",
+      "Lambda fuctions will be no more assumed to be used in the statement where they are used, or at least in the same block. https://github.com/tensorflow/tensorflow/issues/56089\n"
+     ]
+    }
+   ],
    "source": [
     "while True: \n",
     "    ret, frame = cap.read()\n",
@@ -388,14 +585,18 @@
     "                detections['detection_scores'],\n",
     "                category_index,\n",
     "                use_normalized_coordinates=True,\n",
-    "                max_boxes_to_draw=5,\n",
+    "                max_boxes_to_draw=1,\n",
     "                min_score_thresh=.5,\n",
     "                agnostic_mode=False)\n",
+    "    # print(image_np_with_detections)\n",
     "\n",
     "    cv2.imshow('object detection',  cv2.resize(image_np_with_detections, (800, 600)))\n",
+    "    print(image_np_with_detections)\n",
+    "    key = cv2.waitKey(1) & 0xFF\n",
     "    \n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "    if key == ord('q'):\n",
     "        cap.release()\n",
+    "        cv2.destroyAllWindows()\n",
     "        break"
    ]
   },
@@ -405,7 +606,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detections = detect_fn(input_tensor)"
+    "detections = detect_fn(input_tensor)\n",
+    "print(detections)"
    ]
   },
   {
